@@ -12,6 +12,9 @@ Makarius, Marco Hunsicker, and Maik Nijhuis for contributing to this release.
 
 {{{ Bug fixes
 
+- Fix #3598661 - Don't allow negative values in the general option pane.
+  (Thomas Meyer)
+
 - Fix #3596215 - NPE from docking layout save/loads when started with
   -nosettings. (Alan Ezust) 
 
